updates for README