@@ -32,5 +32,4 @@ application {
 tasks.withType<Test> {
     minHeapSize = "512m"
     maxHeapSize = "1024m"
-    jvmArgs = listOf("-XX:MaxPermSize=512m")
 }
